# covidwatch-cloud-functions

./: README.md
functions/: .gitignore  package-lock.json  package.json
functions/native/: Cargo.toml
functions/native/src/: lib.rs
functions/src/: index.ts
