[package]
name = "neon-tcn"
version = "0.1.0"
authors = ["David D. Rolle <dave@rolle.family>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_tcn"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
tcn = "0.4.1"
rand = "0.7"
